CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

24 September 2007
+ added getHomeDir function to Convert class to help with branch
  conversions.

21 September 2007
+ Added a no overwrite option to copy_directory function.
+ Added a chmod command to the copy_directory function.
+ Adding a check for the language.php file in setup as well as the
  existance of the config/core/ directory.
+ Changed allowView function in Key. Before the change, any user with
  rights in the module could view an item regardless of the view
  rights. Now, a user must have edit rights for that item or be on the
  allowable groups to see the item.

20 September 2007
+ Key checks for duplicate keys before saving new rows.
+ New error message for above.
+ Tidying to key class.
+ Updated: conf/error.php

19 September 2007
+ Added '#' to characters looked for in the bb.php filter.

Version 1.6.2
-------------------------------------------------------------------
18 September 2007
+ Fixed several bugs with js_calendar. Thanks Jeff.
+ Updated files: 
  javascript/js_calendar/dhtmlgoodies_calendar/dhtmlgoodies_calendar.css
  javascript/js_calendar/dhtmlgoodies_calendar/dhtmlgoodies_calendar.js
  javascript/js_calendar/head.js
  javascript/js_calendar/phpws_addon.js

17 September 2007
+ Added notes to Mod_Rewrite doc.
+ More work on Web Pages, PageSmith, and Menu conversion.
+ Added rotate and resize image functions to File class. Resize is a
  copy of file cabinet's.
+ Added some focus function calls to the open_window
  javascript. Supposed to prevent window from getting lost behind the
  parent window.

+ Updated: javascript/open_window/head.js

13 September 2007
+ Uploaded PageSmith conversion. Still working out Menu kinks.
+ Rewrote large portions of Menu conversion to function better and
  work with pagesmith.
+ Added extra logic for Database to try to indexBy better.

Version 1.6.1