@@ -2,6 +2,12 @@ CHANGELOG
 This is the change log for the phpWebSite base only. Each module has
 its own separate CHANGELOG file.
 
+28 September 2007
++ Added createPrimaryKey function.
++ Added define to Debug - DEITY_ONLY_TEST. If true, the test will only
+  echo if the user is a deity. This can help if you need to debug on a
+  live site.
+
 24 September 2007
 + added getHomeDir function to Convert class to help with branch
   conversions.
